--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <h2 class="links__header">Обо мне</h2>
         <ul class="links__container">
           <li class="links__link">
-            <p class="links__title">My name is Andrey Mamaev.
-              I’m a QA Engineer, I have been working in the field for 2 years. I will be glad to join your team. Let's make a quality product together.</p>
+            <p class="links__title">Меня зовут Андрей Мамаев. Я инженер по контролю качества, работаю в этой области уже 2 года. Я буду рад присоединиться к вашей команде. Давайте вместе создадим качественный продукт.</p>
           </li>
           <li class="links__link">
             <p class="links__title">Работаю в программах: Postman, SQL, Charles, БД Metabase, БД Compass и др.</p>
