--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./normalize.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" />
     <title>Document</title>
-    <link type="image/x-icon" href="/favicon.ico" rel="ico">
+    <link type="image/x-icon" href="/favicon.ico" rel="icon">
   </head>
   <body>
     <header class="header">
