--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./normalize.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>QA - Quality Assurance</title>
     <link href="/favicon.ico" rel="icon">
   </head>
   <body>
