--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
           </li>
           <li class="links__link">
             <p class="links__title">Эл. почта</p>
-            <a class="linsk__link" href="mailto:big22@yandex.ru"
-              >big22@yandex.ru</a
-            >
+            <a class="linsk__link" href="mailto:big22@yandex.ru">big22@yandex.ru</a>
           </li>
           <li class="links__link">
             <p class="links__title">Гит</p>
@@ -58,5 +56,6 @@
       <button type = "button" class="button-link" href=""> Мой девиз </button>
     </footer>
     <script type="text/javascript" src="js.js"></script>
+    <a href="https://ru.stackoverflow.com/users/570371/%d0%90%d0%bd%d0%b4%d1%80%d0%b5%d0%b9"><img src="https://ru.stackoverflow.com/users/flair/570371.png" width="208" height="58" alt="Профиль участника Андрей на сайте &#171;Stack Overflow на русском&#187;, Вопросы и ответы для программистов" title="Профиль участника Андрей на сайте &#171;Stack Overflow на русском&#187;, Вопросы и ответы для программистов"></a>
   </body>
 </html>
