--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
             <p class="links__title">Меня зовут Андрей Мамаев. Я инженер по контролю качества, работаю в этой области уже 2 года. Я буду рад присоединиться к вашей команде. Давайте вместе создадим качественный продукт.</p>
           </li>
           <li class="links__link">
-            <p class="links__title">Работаю в программах: Postman, SQL, Charles, БД Metabase, БД Compass и др.</p>
+            <p class="links__title">Работаю в программах: Postman, SQL, Charles, Linux, БД Metabase, БД Compass и др.</p>
+          </li>
+          <li class="links__link">
+            <p class="links__title">Опыт работы: стажировка в Джунах QA Studio, проект авторизации в Ростелеком, тестирование мобильных приложений</p>
           </li>
           <li class="links__link">
             <p class="links__title">Мои увлечения: походы, велопрогулки, лыжи, туры по городам</p>
@@ -72,6 +75,6 @@
       <button type = "button" class="button-link" href=""> Мой девиз </button>
     </footer>
     <script type="text/javascript" src="js.js"></script>
-    <a href="https://ru.stackoverflow.com/users/570371/%d0%90%d0%bd%d0%b4%d1%80%d0%b5%d0%b9"><img src="https://ru.stackoverflow.com/users/flair/570371.png" width="208" height="58" alt="Профиль участника Андрей на сайте &#171;Stack Overflow на русском&#187;, Вопросы и ответы для программистов" title="Профиль участника Андрей на сайте &#171;Stack Overflow на русском&#187;, Вопросы и ответы для программистов"></a>
+    <div>Избранное</div>
   </body>
 </html>
